5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1721_3032.log
== TEST (2019-05-02 18:44:25) 
-- CODE:
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:36) 
-- CODE:
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	print("fdg")
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:29) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	print("fdg")
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:47:32) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(z)
	
-- EXECUTION TIME:
0.142169
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.2620174282199965
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:10) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(z)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:48:16) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(z)
	
-- EXECUTION TIME:
0.208226
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.2620174282199965
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:23) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(z)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:33) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(z)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:49:39) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(z)
	
-- EXECUTION TIME:
0.217019
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.2620174282199965
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:45) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(z)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:50:06) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(round(z,4))
	
-- EXECUTION TIME:
0.137286
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:50:12) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(round(z,4))
	
-- EXECUTION TIME:
0.167777
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.4106735979665885
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:50:12) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(round(z,4))
	
-- EXECUTION TIME:
0.303327
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:50:12) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(round(z,4))
	
-- EXECUTION TIME:
0.231089
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1.262
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:

-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:21) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
elif(x>2):
	z=x**(1/3)
	print(round(z,4))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:51:09) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- EXECUTION TIME:
0.124269
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:51:33) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- EXECUTION TIME:
0.176876
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:51:33) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- EXECUTION TIME:
0.121992
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:34) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:44) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:48) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:06) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:15) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:31) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(z)
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:52:45) 
-- CODE:
from math import*
x=float(input("x   "))
if(x<=0):
	print("0")
elif(x>0)and(x<=1):
	print("1")
elif(x>1)and(x<=2):
	z=sqrt(x)
	print(round(z,4))
else:
	if(x>2):
		z=x**(1/3)
		print(round(z,4))
	
-- EXECUTION TIME:
0.153934
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4107
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
